<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple"
    android:orientation="vertical"
    tools:context="com.example.f1.picado.take_note">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Pic A Do"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imagePreview"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/card_background"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/title"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/contact_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/contact_no_optional"
                            android:inputType="number"
                            android:textSize="22sp"
                            android:visibility="gone" />

                        <EditText
                            android:id="@+id/description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/white_back"
                            android:hint="@string/description"
                            android:inputType="textMultiLine"
                            android:maxLines="5"
                            android:minLines="5"
                            android:scrollbars="vertical"
                            android:scrollbarSize="5dp"
                            android:scrollbarStyle="outsideInset"
                            android:overScrollMode="ifContentScrolls"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="@drawable/stroke_background1"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/contact"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"
                            android:src="@drawable/contact" />

                        <ImageView
                            android:id="@+id/gallery"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"
                            android:src="@drawable/gallery" />

                        <ImageView
                            android:id="@+id/camera"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:scaleType="fitCenter"
                            android:src="@drawable/camera" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/stroke_background"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/todo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/todo" />

                    <TextView
                        android:id="@+id/todo_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/todo"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/anniversary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/anniversary" />

                    <TextView
                        android:id="@+id/anniversary_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/anniv"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/birthday" />

                    <TextView
                        android:id="@+id/birthday_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/birthday"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/events" />

                    <TextView
                        android:id="@+id/event_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/event"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/bill" />

                    <TextView
                        android:id="@+id/bill_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/bills"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/card_background"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorDivider"
                        android:paddingLeft="10dp"
                        android:text="Alarm"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/alarm_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:soundEffectsEnabled="true"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/alarm_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_background"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/ringtone"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/button_background1"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:text="@string/ringtone"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/vibrate"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/button_background"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="Vibrate"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/time"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/button_background2"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:text="Time"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/card_background"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_background"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorDivider"
                        android:paddingLeft="10dp"
                        android:text="Repeat"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/repeat_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/repeat_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_background"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/repeat_daily"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/stroke_button"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:text="@string/daily"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/repeat_weekly"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/stroke_button"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/weekly"
                            android:textColor="@android:color/black" />


                        <TextView
                            android:id="@+id/repeat_monthly"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/stroke_button"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:text="@string/monthly"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />


                        <TextView
                            android:id="@+id/repeat_yearly"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/stroke_button"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/yearly"
                            android:textColor="@android:color/black" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
